fix: :bug: overflow

--- a/src/routes/styling.scss
+++ b/src/routes/styling.scss
@@ -47,6 +47,7 @@ $WorkSans: 'Work Sans', sans-serif;
 	display: flex;
 	width: 100vw;
 	height: 100vh;
+	overflow: hidden;
 }
 
 #signInWrapper {
